Add components for ama

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "qrcode-svg": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.4",
     "recoil": "^0.7.5",
     "recoil-nexus": "^0.4.0",
+    "timeago.js": "^4.0.2",
     "uint8arrays": "^3.1.0",
     "web-vitals": "^2.1.4",
     "webnative": "^0.34.2"
