--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "timeago.js": "^4.0.2",
     "uint8arrays": "^3.1.0",
     "web-vitals": "^2.1.4",
-    "webnative": "^0.34.2"
+    "webnative": "^0.34.2",
+    "webnative-walletauth": "fission-codes/webnative-walletauth#a8db611b6b4ab1ce55d20b1e4b86694f504eac9c"
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-app-rewired start",
